--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -30,22 +30,23 @@ bind = SUPER SHIFT, B, exec, $browser --profile-directory="Profile 5"
 bind = SUPER, M, exec, uwsm app -- spotify
 bind = SUPER, N, exec, $terminal -e nvim
 bind = SUPER, T, exec, $terminal -e btop
-bind = SUPER, D, exec, uwsm app -- discord
 bind = SUPER SHIFT, D, exec, $terminal -e lazydocker
 # bind = SUPER, G, exec, uwsm app -- signal-desktop
 bind = SUPER, O, exec, uwsm app -- obsidian -disable-gpu
-bind = SUPER, slash, exec, uwsm app -- bitwarden-desktop
+bind = SUPER, slash, exec, uwsm app -- 1password
 
 bind = SUPER, A, exec, $webapp="https://chatgpt.com"
-bind = SUPER, C, exec, $webapp="https://app.usemotion.com/web/calendar"
-bind = SUPER, E, exec, $webapp="https://mail.google.com/mail/u/1/"
+bind = SUPER, C, exec, $webapp="https://app.hey.com/calendar/weeks/"
+bind = SUPER, E, exec, $webapp="https://app.hey.com"
 bind = SUPER SHIFT, E, exec, $webapp="https://mail.google.com/mail/u/2/"
 bind = SUPER, Y, exec, $webapp="https://youtube.com/"
 bind = SUPER, W, exec, $webapp="https://web.whatsapp.com/"
 bind = SUPER SHIFT, J, exec, $webapp="https://datapizza.atlassian.net/jira/software/c/projects/DT/boards/5"
 bind = SUPER SHIFT, F, exec, $webapp="https://www.figma.com/"
-# bind = SUPER, X, exec, $webapp="https://x.com/"
-# bind = SUPER SHIFT, X, exec, $webapp="https://x.com/compose/post"
+# bind = SUPER, D, exec, uwsm app -- discord
+bind = SUPER, D, exec, $webapp="https://discord.com/channels/@me"
+bind = SUPER, X, exec, $webapp="https://x.com/"
+bind = SUPER SHIFT, X, exec, $webapp="https://x.com/compose/post"
 
 bind = SUPER, H, movefocus, l
 bind = SUPER, L, movefocus, r
@@ -68,7 +69,7 @@ bind = SUPER, S, togglesplit # dwindle
 input {
   # Use multiple keyboard layouts and switch between them with Alt + Space
   kb_layout = gb
-  kb_options = ctrl:nocaps,compose:ralt
+  kb_options = ctrl:nocaps
 
 
   # Change speed of keyboard repeat
