--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -37,8 +37,9 @@ bind = SUPER, slash, exec, uwsm app -- 1password
 
 bind = SUPER, A, exec, $webapp="https://chatgpt.com"
 bind = SUPER, C, exec, $webapp="https://app.hey.com/calendar/weeks/"
+bind = SUPER SHIFT, C, exec, $webapp="https://calendar.google.com/calendar/u/1/r"
 bind = SUPER, E, exec, $webapp="https://app.hey.com"
-bind = SUPER SHIFT, E, exec, $webapp="https://mail.google.com/mail/u/2/"
+bind = SUPER SHIFT, E, exec, $webapp="https://mail.google.com/mail/u/1/"
 bind = SUPER, Y, exec, $webapp="https://youtube.com/"
 bind = SUPER, W, exec, $webapp="https://web.whatsapp.com/"
 bind = SUPER SHIFT, J, exec, $webapp="https://datapizza.atlassian.net/jira/software/c/projects/DT/boards/5"
@@ -58,7 +59,7 @@ bind = SUPER, Q, killactive
 bind = SUPER, S, togglesplit # dwindle
 
 # Extra autostart processes
-# exec-once = dropbox-cli start
+# exec-once = 
 
 # Extra env variables
 # Note: You must relaunch Hyprland after changing envs (use Super+Esc, then Relaunch)
