update tmux layouts

--- a/tmux/.config/tmux/layouts/dpcrm.yaml
+++ b/tmux/.config/tmux/layouts/dpcrm.yaml
@@ -15,18 +15,13 @@ windows:
   - window_name: cmd
     panes:
       - shell_command:
-          -
-  - window_name: frontend
-    panes:
-      - shell_command:
-          - cd crm
-          - pnpm dev
+          - clear
   - window_name: server
     layout: main-vertical
     panes:
       - shell_command:
-        - cd techfolio-backend
-        - docker-compose up
+          - cd techfolio-backend
+          - poetry run python manage.py runserver
       - shell_command:
-        - cd search-tool-microservice
-        - docker-compose up
+          - cd crm
+          - pnpm dev
